Re-import Russian translations

--- a/Interfaces/ru.lproj/ExportAccessoryViewController.strings
+++ b/Interfaces/ru.lproj/ExportAccessoryViewController.strings
@@ -1,392 +1,9 @@
-/* Class = "NSMenuItem"; title = "Bring All to Front"; ObjectID = "5"; */
-"5.title" = "Все окна – на передний план";
+/* Class = "NSButtonCell"; title = "Export all subscriptions"; ObjectID = "6rj-zb-zOa"; */
+"6rj-zb-zOa.title" = "Экспортировать все подписки";
 
-/* Class = "NSMenuItem"; title = "Window"; ObjectID = "19"; */
-"19.title" = "Окно";
+/* Class = "NSButtonCell"; title = "Preserve group folders in exported file"; ObjectID = "IYg-Pm-bcI"; */
+"IYg-Pm-bcI.title" = "Сохранить группы в экспортируемом файле";
 
-/* Class = "NSWindow"; title = "Vienna"; ObjectID = "21"; */
-"21.title" = "Vienna";
+/* Class = "NSButtonCell"; title = "Export selected subscriptions"; ObjectID = "KgE-bb-aJn"; */
+"KgE-bb-aJn.title" = "Экспортировать выбранные подписки";
 
-/* Class = "NSMenuItem"; title = "Minimize"; ObjectID = "23"; */
-"23.title" = "Свернуть";
-
-/* Class = "NSMenu"; title = "Window"; ObjectID = "24"; */
-"24.title" = "Окно";
-
-/* Class = "NSMenuItem"; title = "Vienna"; ObjectID = "56"; */
-"56.title" = "Vienna";
-
-/* Class = "NSMenu"; title = "Vienna"; ObjectID = "57"; */
-"57.title" = "Vienna";
-
-/* Class = "NSMenuItem"; title = "About Vienna"; ObjectID = "58"; */
-"58.title" = "О программе Vienna";
-
-/* Class = "NSMenuItem"; title = "Page Setup…"; ObjectID = "77"; */
-"77.title" = "Параметры страницы…";
-
-/* Class = "NSMenuItem"; title = "Print…"; ObjectID = "78"; */
-"78.title" = "Напечатать…";
-
-/* Class = "NSMenu"; title = "File"; ObjectID = "81"; */
-"81.title" = "Файл";
-
-/* Class = "NSMenuItem"; title = "File"; ObjectID = "83"; */
-"83.title" = "Файл";
-
-/* Class = "NSMenuItem"; title = "Help"; ObjectID = "103"; */
-"103.title" = "Справка";
-
-/* Class = "NSMenu"; title = "Help"; ObjectID = "106"; */
-"106.title" = "Справка";
-
-/* Class = "NSMenuItem"; title = "Vienna Help"; ObjectID = "111"; */
-"111.title" = "Справка Vienna";
-
-/* Class = "NSMenuItem"; title = "Preferences…"; ObjectID = "129"; */
-"129.title" = "Настройки…";
-
-/* Class = "NSMenu"; title = "Services"; ObjectID = "130"; */
-"130.title" = "Службы";
-
-/* Class = "NSMenuItem"; title = "Services"; ObjectID = "131"; */
-"131.title" = "Службы";
-
-/* Class = "NSMenuItem"; title = "Hide Vienna"; ObjectID = "134"; */
-"134.title" = "Скрыть Vienna";
-
-/* Class = "NSMenuItem"; title = "Quit Vienna"; ObjectID = "136"; */
-"136.title" = "Завершить работу Vienna";
-
-/* Class = "NSMenuItem"; title = "Hide Others"; ObjectID = "145"; */
-"145.title" = "Скрыть другие";
-
-/* Class = "NSMenuItem"; title = "Show All"; ObjectID = "150"; */
-"150.title" = "Отобразить все";
-
-/* Class = "NSMenuItem"; title = "Find…"; ObjectID = "154"; */
-"154.title" = "Найти…";
-
-/* Class = "NSMenuItem"; title = "Jump to Selection"; ObjectID = "155"; */
-"155.title" = "Перейти к выбранному";
-
-/* Class = "NSMenuItem"; title = "Copy"; ObjectID = "157"; */
-"157.title" = "Копировать";
-
-/* Class = "NSMenuItem"; title = "Undo"; ObjectID = "158"; */
-"158.title" = "Отменить";
-
-/* Class = "NSMenu"; title = "Find"; ObjectID = "159"; */
-"159.title" = "Найти";
-
-/* Class = "NSMenuItem"; title = "Cut"; ObjectID = "160"; */
-"160.title" = "Вырезать";
-
-/* Class = "NSMenuItem"; title = "Use Selection for Find"; ObjectID = "161"; */
-"161.title" = "Искать выделенное";
-
-/* Class = "NSMenuItem"; title = "Find Previous"; ObjectID = "162"; */
-"162.title" = "Предыдущее совпадение";
-
-/* Class = "NSMenuItem"; title = "Edit"; ObjectID = "163"; */
-"163.title" = "Правка";
-
-/* Class = "NSMenuItem"; title = "Delete"; ObjectID = "164"; */
-"164.title" = "Удалить";
-
-/* Class = "NSMenuItem"; title = "Find Next"; ObjectID = "167"; */
-"167.title" = "Следующее совпадение";
-
-/* Class = "NSMenuItem"; title = "Find"; ObjectID = "168"; */
-"168.title" = "Найти";
-
-/* Class = "NSMenu"; title = "Edit"; ObjectID = "169"; */
-"169.title" = "Правка";
-
-/* Class = "NSMenuItem"; title = "Paste"; ObjectID = "171"; */
-"171.title" = "Вставить";
-
-/* Class = "NSMenuItem"; title = "Select All"; ObjectID = "172"; */
-"172.title" = "Выбрать все";
-
-/* Class = "NSMenuItem"; title = "Redo"; ObjectID = "173"; */
-"173.title" = "Повторить";
-
-/* Class = "NSMenuItem"; title = "Zoom"; ObjectID = "197"; */
-"197.title" = "Изменить масштаб";
-
-/* Class = "NSMenuItem"; title = "View"; ObjectID = "235"; */
-"235.title" = "Вид";
-
-/* Class = "NSMenu"; title = "View"; ObjectID = "237"; */
-"237.title" = "Вид";
-
-/* Class = "NSMenu"; title = "Article"; ObjectID = "300"; */
-"300.title" = "Статья";
-
-/* Class = "NSMenuItem"; title = "Article"; ObjectID = "301"; */
-"301.title" = "Статья";
-
-/* Class = "NSMenuItem"; title = "Next Unread"; ObjectID = "344"; */
-"344.title" = "Следующая непрочитанная";
-
-/* Class = "NSMenuItem"; title = "Sort By"; ObjectID = "387"; */
-"387.title" = "Сортировать по";
-
-/* Class = "NSMenu"; title = "Sort By"; ObjectID = "388"; */
-"388.title" = "Сортировать по";
-
-/* Class = "NSMenuItem"; title = "Activity Window"; ObjectID = "402"; */
-"402.title" = "Окно действий";
-
-/* Class = "NSMenuItem"; title = "Refresh All Subscriptions"; ObjectID = "406"; */
-"406.title" = "Обновить все подписки";
-
-/* Class = "NSMenuItem"; title = "Back"; ObjectID = "422"; */
-"422.title" = "Назад";
-
-/* Class = "NSMenuItem"; title = "Forward"; ObjectID = "423"; */
-"423.title" = "Далее";
-
-/* Class = "NSMenuItem"; title = "Columns"; ObjectID = "442"; */
-"442.title" = "Колонки";
-
-/* Class = "NSMenu"; title = "Columns"; ObjectID = "443"; */
-"443.title" = "Колонки";
-
-/* Class = "NSMenuItem"; title = "New Smart Folder…"; ObjectID = "574"; */
-"574.title" = "Новая Смарт-папка…";
-
-/* Class = "NSMenuItem"; title = "Refresh Selected Subscriptions"; ObjectID = "604"; */
-"604.title" = "Обновить выбранные подписки";
-
-/* Class = "NSMenuItem"; title = "New Subscription…"; ObjectID = "690"; */
-"690.title" = "Новая подписка…";
-
-/* Class = "NSMenuItem"; title = "Import Subscriptions…"; ObjectID = "780"; */
-"780.title" = "Импортировать подписки…";
-
-/* Class = "NSMenuItem"; title = "Export Subscriptions…"; ObjectID = "781"; */
-"781.title" = "Экспортировать подписки…";
-
-/* Class = "NSMenuItem"; title = "Mark Unread"; ObjectID = "789"; */
-"789.title" = "Снять отметку о прочтении";
-
-/* Class = "NSMenuItem"; title = "Mark Flagged"; ObjectID = "790"; */
-"790.title" = "Отметить";
-
-/* Class = "NSMenuItem"; title = "New Group Folder…"; ObjectID = "806"; */
-"806.title" = "Новая группа…";
-
-/* Class = "NSMenuItem"; title = "Style"; ObjectID = "826"; */
-"826.title" = "Стиль";
-
-/* Class = "NSMenu"; title = "Style"; ObjectID = "827"; */
-"827.title" = "Стиль";
-
-/* Class = "NSMenuItem"; title = "Stop Refreshing"; ObjectID = "858"; */
-"858.title" = "Остановить обновление";
-
-/* Class = "NSButtonCell"; title = "Export all subscriptions"; ObjectID = "862"; */
-"862.title" = "Экспортировать все подписки";
-
-/* Class = "NSButtonCell"; title = "Export selected subscriptions"; ObjectID = "863"; */
-"863.title" = "Экспортировать выбранные подписки";
-
-/* Class = "NSMenuItem"; title = "Vienna Web Site"; ObjectID = "929"; */
-"929.title" = "Сайт программы Vienna";
-
-/* Class = "NSMenuItem"; title = "Close Window"; ObjectID = "935"; */
-"935.title" = "Закрыть окно";
-
-/* Class = "NSMenuItem"; title = "Main Window"; ObjectID = "940"; */
-"940.title" = "Главное окно";
-
-/* Class = "NSMenuItem"; title = "Empty Trash"; ObjectID = "961"; */
-"961.title" = "Очистить Корзину";
-
-/* Class = "NSMenuItem"; title = "Previous Tab"; ObjectID = "1008"; */
-"1008.title" = "Предыдущая вкладка";
-
-/* Class = "NSMenuItem"; title = "Next Tab"; ObjectID = "1009"; */
-"1009.title" = "Следующая вкладка";
-
-/* Class = "NSMenuItem"; title = "Close Tab"; ObjectID = "1023"; */
-"1023.title" = "Закрыть вкладку";
-
-/* Class = "NSMenuItem"; title = "Reload Page"; ObjectID = "1025"; */
-"1025.title" = "Перезагрузить страницу";
-
-/* Class = "NSMenuItem"; title = "Stop Reloading Page"; ObjectID = "1027"; */
-"1027.title" = "Остановить загрузку страницы";
-
-/* Class = "NSMenuItem"; title = "Close All Tabs"; ObjectID = "1036"; */
-"1036.title" = "Закрыть все вкладки";
-
-/* Class = "NSMenuItem"; title = "Open Article Page"; ObjectID = "1040"; */
-"1040.title" = "Открыть статью";
-
-/* Class = "NSMenuItem"; title = "Restore Article"; ObjectID = "1044"; */
-"1044.title" = "Восстановить статью";
-
-/* Class = "NSMenuItem"; title = "Downloads"; ObjectID = "1061"; */
-"1061.title" = "Загрузки";
-
-/* Class = "NSMenuItem"; title = "Open Article Page in External Browser"; ObjectID = "1067"; */
-"1067.title" = "Открыть статью во внешнем браузере";
-
-/* Class = "NSMenuItem"; title = "Send Link by Email"; ObjectID = "1073"; */
-"1073.title" = "Send Link by Email";
-
-/* Class = "NSMenuItem"; title = "Bigger Text"; ObjectID = "1084"; */
-"1084.title" = "Увеличить шрифт";
-
-/* Class = "NSMenuItem"; title = "Smaller Text"; ObjectID = "1085"; */
-"1085.title" = "Уменьшить шрифт";
-
-/* Class = "NSMenuItem"; title = "Open Web Location…"; ObjectID = "1101"; */
-"1101.title" = "Открыть адрес веб…";
-
-/* Class = "NSMenuItem"; title = "Check for Updates"; ObjectID = "1104"; */
-"1104.title" = "Проверить наличие обновлений";
-
-/* Class = "NSMenuItem"; title = "Refresh Folder Images"; ObjectID = "1106"; */
-"1106.title" = "Обновить изображения папки";
-
-/* Class = "NSMenuItem"; title = "Layout"; ObjectID = "1108"; */
-"1108.title" = "Раскладка";
-
-/* Class = "NSMenu"; title = "Layout"; ObjectID = "1109"; */
-"1109.title" = "Раскладка";
-
-/* Class = "NSMenuItem"; title = "Horizontal"; ObjectID = "1110"; */
-"1110.title" = "Отчет";
-
-/* Class = "NSMenuItem"; title = "Vertical"; ObjectID = "1116"; */
-"1116.title" = "Сжатая";
-
-/* Class = "NSMenuItem"; title = "Filter By"; ObjectID = "1117"; */
-"1117.title" = "Показывать";
-
-/* Class = "NSMenu"; title = "Filter By"; ObjectID = "1118"; */
-"1118.title" = "Показывать";
-
-/* Class = "NSMenuItem"; title = "Keyboard Shortcuts"; ObjectID = "1146"; */
-"1146.title" = "Горячие клавиши";
-
-/* Class = "NSMenuItem"; title = "Unified"; ObjectID = "1160"; */
-"1160.title" = "Общая";
-
-/* Class = "NSMenuItem"; title = "Folder"; ObjectID = "1177"; */
-"1177.title" = "Папка";
-
-/* Class = "NSMenu"; title = "Folder"; ObjectID = "1178"; */
-"1178.title" = "Папка";
-
-/* Class = "NSMenuItem"; title = "Edit…"; ObjectID = "1180"; */
-"1180.title" = "Правка…";
-
-/* Class = "NSMenuItem"; title = "Rename…"; ObjectID = "1181"; */
-"1181.title" = "Переименовать…";
-
-/* Class = "NSMenuItem"; title = "Delete…"; ObjectID = "1184"; */
-"1184.title" = "Удалить…";
-
-/* Class = "NSMenuItem"; title = "Skip Folder"; ObjectID = "1186"; */
-"1186.title" = "Пропустить папку";
-
-/* Class = "NSMenuItem"; title = "Mark All Articles as Read"; ObjectID = "1187"; */
-"1187.title" = "Отметить все статьи как прочитанные";
-
-/* Class = "NSMenuItem"; title = "Open Subscription Home Page"; ObjectID = "1191"; */
-"1191.title" = "Открыть страницу подписки";
-
-/* Class = "NSMenuItem"; title = "Open Subscription Home Page in External Browser"; ObjectID = "1192"; */
-"1192.title" = "Открыть страницу подписки во внешнем браузере";
-
-/* Class = "NSMenuItem"; title = "Mark All Subscriptions as Read"; ObjectID = "1195"; */
-"1195.title" = "Отметить все подписки как прочитанные";
-
-/* Class = "NSMenuItem"; title = "Delete Article"; ObjectID = "1198"; */
-"1198.title" = "Удалить статью";
-
-/* Class = "NSMenuItem"; title = "Open New Tab"; ObjectID = "1214"; */
-"1214.title" = "Открыть новую вкладку";
-
-/* Class = "NSMenuItem"; title = "Download Enclosure"; ObjectID = "1216"; */
-"1216.title" = "Загрузить вложение";
-
-/* Class = "NSMenuItem"; title = "Customize Toolbar…"; ObjectID = "1257"; */
-"1257.title" = "Настроить панель инструментов";
-
-/* Class = "NSMenuItem"; title = "Hide Toolbar"; ObjectID = "1258"; */
-"1258.title" = "Hide Toolbar";
-
-/* Class = "NSMenuItem"; title = "Hide Status Bar"; ObjectID = "1259"; */
-"1259.title" = "Спрятать строку статуса";
-
-/* Class = "NSMenuItem"; title = "Show Filter Bar"; ObjectID = "1325"; */
-"1325.title" = "Показать панель фильтра";
-
-/* Class = "NSMenuItem"; title = "Search Articles"; ObjectID = "1327"; */
-"1327.title" = "Искать статьи";
-
-/* Class = "NSMenuItem"; title = "Order By"; ObjectID = "1336"; */
-"1336.title" = "Упорядочить подписки";
-
-/* Class = "NSMenu"; title = "Order By"; ObjectID = "1337"; */
-"1337.title" = "Упорядочить подписки";
-
-/* Class = "NSMenuItem"; title = "Manual"; ObjectID = "1338"; */
-"1338.title" = "Вручную";
-
-/* Class = "NSMenuItem"; title = "Name"; ObjectID = "1339"; */
-"1339.title" = "По названию";
-
-/* Class = "NSButtonCell"; title = "Preserve group folders in exported file"; ObjectID = "1368"; */
-"1368.title" = "Сохранить группы в экспортируемом файле";
-
-/* Class = "NSTextFieldCell"; title = "Filter by:"; ObjectID = "1377"; */
-"1377.title" = "Filter by:";
-
-/* Class = "NSButtonCell"; title = "Radio"; ObjectID = "1380"; */
-"1380.title" = "Radio";
-
-/* Class = "NSMenuItem"; title = "Show XML Source"; ObjectID = "1394"; */
-"1394.title" = "Показать XML-код ленты";
-
-/* Class = "NSTextFieldCell"; title = "Current Filter"; ObjectID = "1404"; */
-"1404.title" = "Current Filter";
-
-/* Class = "NSMenuItem"; title = "Unsubscribe"; ObjectID = "1408"; */
-"1408.title" = "Отписаться от ленты";
-
-/* Class = "NSMenuItem"; title = "Get Info…"; ObjectID = "1409"; */
-"1409.title" = "Сведения…";
-
-/* Class = "NSMenuItem"; title = "Use Current Style for Articles"; ObjectID = "1413"; */
-"1413.title" = "Использовать текущий стиль для статьи";
-
-/* Class = "NSMenuItem"; title = "Use Web Page for Articles"; ObjectID = "1415"; */
-"1415.title" = "Использовать веб-страницу статьи";
-
-/* Class = "NSMenuItem"; title = "Force Refresh Selected Subscriptions From Open Reader"; ObjectID = "1425"; */
-"1425.title" = "Принудительно обновить выбранные подписки из Open Reader";
-
-/* Class = "NSMenuItem"; title = "Update Subscriptions From Open Reader"; ObjectID = "1428"; */
-"1428.title" = "Обновить подписки из Open Reader";
-
-/* Class = "NSMenuItem"; title = "Reindex Database"; ObjectID = "1458"; */
-"1458.title" = "Проиндексировать базу данных";
-
-/* Class = "NSMenuItem"; title = "Refresh All Subscriptions"; ObjectID = "6yn-y8-lF1"; */
-"6yn-y8-lF1.title" = "Обновить все подписки";
-
-/* Class = "NSMenuItem"; title = "Mark All Subscriptions as Read"; ObjectID = "ecl-HO-Kpi"; */
-"ecl-HO-Kpi.title" = "Отметить все подписки как прочитанные";
-
-/* Class = "NSMenu"; title = "Spelling"; ObjectID = "fad-Nj-OFI"; */
-"fad-Nj-OFI.title" = "Правописание";
-
-/* Class = "NSMenuItem"; title = "Mark Read"; ObjectID = "pKl-6f-Hlc"; */
-"pKl-6f-Hlc.title" = "Отметить как прочитанное";
