--- a/Interfaces/sv.lproj/RSSFeed.strings
+++ b/Interfaces/sv.lproj/RSSFeed.strings
@@ -26,4 +26,5 @@
 "114.title" = "Redigera prenumeration";
 
 /* Class = "NSButtonCell"; title = "Subscribe in Open Reader"; ObjectID = "116"; */
-"116.title" = "Subscribe in Open Reader";
+"116.title" = "Prenumerera i Open Reader";
+
