--- a/Interfaces/sv.lproj/ExportAccessoryViewController.strings
+++ b/Interfaces/sv.lproj/ExportAccessoryViewController.strings
@@ -1,392 +1,9 @@
-/* Class = "NSMenuItem"; title = "Bring All to Front"; ObjectID = "5"; */
-"5.title" = "Lägg alla överst";
+/* Class = "NSButtonCell"; title = "Export all subscriptions"; ObjectID = "6rj-zb-zOa"; */
+"6rj-zb-zOa.title" = "Exportera alla prenumerationer";
 
-/* Class = "NSMenuItem"; title = "Window"; ObjectID = "19"; */
-"19.title" = "Fönster";
+/* Class = "NSButtonCell"; title = "Preserve group folders in exported file"; ObjectID = "IYg-Pm-bcI"; */
+"IYg-Pm-bcI.title" = "Bevara gruppmappar";
 
-/* Class = "NSWindow"; title = "Vienna"; ObjectID = "21"; */
-"21.title" = "Vienna";
+/* Class = "NSButtonCell"; title = "Export selected subscriptions"; ObjectID = "KgE-bb-aJn"; */
+"KgE-bb-aJn.title" = "Exportera markerade prenumerationer";
 
-/* Class = "NSMenuItem"; title = "Minimize"; ObjectID = "23"; */
-"23.title" = "Minimera";
-
-/* Class = "NSMenu"; title = "Window"; ObjectID = "24"; */
-"24.title" = "Fönster";
-
-/* Class = "NSMenuItem"; title = "Vienna"; ObjectID = "56"; */
-"56.title" = "Vienna";
-
-/* Class = "NSMenu"; title = "Vienna"; ObjectID = "57"; */
-"57.title" = "Vienna";
-
-/* Class = "NSMenuItem"; title = "About Vienna"; ObjectID = "58"; */
-"58.title" = "Om Vienna";
-
-/* Class = "NSMenuItem"; title = "Page Setup…"; ObjectID = "77"; */
-"77.title" = "Utskriftsformat…";
-
-/* Class = "NSMenuItem"; title = "Print…"; ObjectID = "78"; */
-"78.title" = "Skriv ut…";
-
-/* Class = "NSMenu"; title = "File"; ObjectID = "81"; */
-"81.title" = "Arkiv";
-
-/* Class = "NSMenuItem"; title = "File"; ObjectID = "83"; */
-"83.title" = "Arkiv";
-
-/* Class = "NSMenuItem"; title = "Help"; ObjectID = "103"; */
-"103.title" = "Hjälp";
-
-/* Class = "NSMenu"; title = "Help"; ObjectID = "106"; */
-"106.title" = "Hjälp";
-
-/* Class = "NSMenuItem"; title = "Vienna Help"; ObjectID = "111"; */
-"111.title" = "Vienna hjälp";
-
-/* Class = "NSMenuItem"; title = "Preferences…"; ObjectID = "129"; */
-"129.title" = "Inställningar…";
-
-/* Class = "NSMenu"; title = "Services"; ObjectID = "130"; */
-"130.title" = "Tjänster";
-
-/* Class = "NSMenuItem"; title = "Services"; ObjectID = "131"; */
-"131.title" = "Tjänster";
-
-/* Class = "NSMenuItem"; title = "Hide Vienna"; ObjectID = "134"; */
-"134.title" = "Göm Vienna";
-
-/* Class = "NSMenuItem"; title = "Quit Vienna"; ObjectID = "136"; */
-"136.title" = "Avsluta Vienna";
-
-/* Class = "NSMenuItem"; title = "Hide Others"; ObjectID = "145"; */
-"145.title" = "Göm övriga";
-
-/* Class = "NSMenuItem"; title = "Show All"; ObjectID = "150"; */
-"150.title" = "Visa alla";
-
-/* Class = "NSMenuItem"; title = "Find…"; ObjectID = "154"; */
-"154.title" = "Sök…";
-
-/* Class = "NSMenuItem"; title = "Jump to Selection"; ObjectID = "155"; */
-"155.title" = "Gå till markering";
-
-/* Class = "NSMenuItem"; title = "Copy"; ObjectID = "157"; */
-"157.title" = "Kopiera";
-
-/* Class = "NSMenuItem"; title = "Undo"; ObjectID = "158"; */
-"158.title" = "Ångra";
-
-/* Class = "NSMenu"; title = "Find"; ObjectID = "159"; */
-"159.title" = "Sök";
-
-/* Class = "NSMenuItem"; title = "Cut"; ObjectID = "160"; */
-"160.title" = "Klipp ut";
-
-/* Class = "NSMenuItem"; title = "Use Selection for Find"; ObjectID = "161"; */
-"161.title" = "Använd markering för sökning";
-
-/* Class = "NSMenuItem"; title = "Find Previous"; ObjectID = "162"; */
-"162.title" = "Sök föregående";
-
-/* Class = "NSMenuItem"; title = "Edit"; ObjectID = "163"; */
-"163.title" = "Redigera";
-
-/* Class = "NSMenuItem"; title = "Delete"; ObjectID = "164"; */
-"164.title" = "Radera";
-
-/* Class = "NSMenuItem"; title = "Find Next"; ObjectID = "167"; */
-"167.title" = "Sök nästa";
-
-/* Class = "NSMenuItem"; title = "Find"; ObjectID = "168"; */
-"168.title" = "Sök";
-
-/* Class = "NSMenu"; title = "Edit"; ObjectID = "169"; */
-"169.title" = "Redigera";
-
-/* Class = "NSMenuItem"; title = "Paste"; ObjectID = "171"; */
-"171.title" = "Klista in";
-
-/* Class = "NSMenuItem"; title = "Select All"; ObjectID = "172"; */
-"172.title" = "Markera allt";
-
-/* Class = "NSMenuItem"; title = "Redo"; ObjectID = "173"; */
-"173.title" = "Gör om";
-
-/* Class = "NSMenuItem"; title = "Zoom"; ObjectID = "197"; */
-"197.title" = "Zooma";
-
-/* Class = "NSMenuItem"; title = "View"; ObjectID = "235"; */
-"235.title" = "Innehåll";
-
-/* Class = "NSMenu"; title = "View"; ObjectID = "237"; */
-"237.title" = "Innehåll";
-
-/* Class = "NSMenu"; title = "Article"; ObjectID = "300"; */
-"300.title" = "Artikel";
-
-/* Class = "NSMenuItem"; title = "Article"; ObjectID = "301"; */
-"301.title" = "Artikel";
-
-/* Class = "NSMenuItem"; title = "Next Unread"; ObjectID = "344"; */
-"344.title" = "Nästa olästa";
-
-/* Class = "NSMenuItem"; title = "Sort By"; ObjectID = "387"; */
-"387.title" = "Sortera";
-
-/* Class = "NSMenu"; title = "Sort By"; ObjectID = "388"; */
-"388.title" = "Sortera";
-
-/* Class = "NSMenuItem"; title = "Activity Window"; ObjectID = "402"; */
-"402.title" = "Aktivitetsvisare";
-
-/* Class = "NSMenuItem"; title = "Refresh All Subscriptions"; ObjectID = "406"; */
-"406.title" = "Uppdatera alla prenumerationer";
-
-/* Class = "NSMenuItem"; title = "Back"; ObjectID = "422"; */
-"422.title" = "Tillbaka";
-
-/* Class = "NSMenuItem"; title = "Forward"; ObjectID = "423"; */
-"423.title" = "Framåt";
-
-/* Class = "NSMenuItem"; title = "Columns"; ObjectID = "442"; */
-"442.title" = "Kolumner";
-
-/* Class = "NSMenu"; title = "Columns"; ObjectID = "443"; */
-"443.title" = "Kolumner";
-
-/* Class = "NSMenuItem"; title = "New Smart Folder…"; ObjectID = "574"; */
-"574.title" = "Ny smart mapp…";
-
-/* Class = "NSMenuItem"; title = "Refresh Selected Subscriptions"; ObjectID = "604"; */
-"604.title" = "Uppdatera markerade prenumerationer";
-
-/* Class = "NSMenuItem"; title = "New Subscription…"; ObjectID = "690"; */
-"690.title" = "Ny prenumeration…";
-
-/* Class = "NSMenuItem"; title = "Import Subscriptions…"; ObjectID = "780"; */
-"780.title" = "Importera prenumerationer…";
-
-/* Class = "NSMenuItem"; title = "Export Subscriptions…"; ObjectID = "781"; */
-"781.title" = "Exportera prenumerationer…";
-
-/* Class = "NSMenuItem"; title = "Mark Unread"; ObjectID = "789"; */
-"789.title" = "Markera som oläst";
-
-/* Class = "NSMenuItem"; title = "Mark Flagged"; ObjectID = "790"; */
-"790.title" = "Flagga artikel";
-
-/* Class = "NSMenuItem"; title = "New Group Folder…"; ObjectID = "806"; */
-"806.title" = "Ny gruppmapp…";
-
-/* Class = "NSMenuItem"; title = "Style"; ObjectID = "826"; */
-"826.title" = "Stil";
-
-/* Class = "NSMenu"; title = "Style"; ObjectID = "827"; */
-"827.title" = "Stil";
-
-/* Class = "NSMenuItem"; title = "Stop Refreshing"; ObjectID = "858"; */
-"858.title" = "Avbryt omladdning";
-
-/* Class = "NSButtonCell"; title = "Export all subscriptions"; ObjectID = "862"; */
-"862.title" = "Exportera alla prenumerationer";
-
-/* Class = "NSButtonCell"; title = "Export selected subscriptions"; ObjectID = "863"; */
-"863.title" = "Exportera markerade prenumerationer";
-
-/* Class = "NSMenuItem"; title = "Vienna Web Site"; ObjectID = "929"; */
-"929.title" = "Vienna webbsida";
-
-/* Class = "NSMenuItem"; title = "Close Window"; ObjectID = "935"; */
-"935.title" = "Stäng fönster";
-
-/* Class = "NSMenuItem"; title = "Main Window"; ObjectID = "940"; */
-"940.title" = "Huvudfönster";
-
-/* Class = "NSMenuItem"; title = "Empty Trash"; ObjectID = "961"; */
-"961.title" = "Töm papperskorgen";
-
-/* Class = "NSMenuItem"; title = "Previous Tab"; ObjectID = "1008"; */
-"1008.title" = "Föregående flik";
-
-/* Class = "NSMenuItem"; title = "Next Tab"; ObjectID = "1009"; */
-"1009.title" = "Nästa flik";
-
-/* Class = "NSMenuItem"; title = "Close Tab"; ObjectID = "1023"; */
-"1023.title" = "Stäng flik";
-
-/* Class = "NSMenuItem"; title = "Reload Page"; ObjectID = "1025"; */
-"1025.title" = "Ladda om sida";
-
-/* Class = "NSMenuItem"; title = "Stop Reloading Page"; ObjectID = "1027"; */
-"1027.title" = "Avbryt omladdning av sida";
-
-/* Class = "NSMenuItem"; title = "Close All Tabs"; ObjectID = "1036"; */
-"1036.title" = "Stäng alla flik";
-
-/* Class = "NSMenuItem"; title = "Open Article Page"; ObjectID = "1040"; */
-"1040.title" = "Artikelsida";
-
-/* Class = "NSMenuItem"; title = "Restore Article"; ObjectID = "1044"; */
-"1044.title" = "Återskapa artikel";
-
-/* Class = "NSMenuItem"; title = "Downloads"; ObjectID = "1061"; */
-"1061.title" = "Hämtade filer";
-
-/* Class = "NSMenuItem"; title = "Open Article Page in External Browser"; ObjectID = "1067"; */
-"1067.title" = "Öppna artikelsida i extern webbläsare";
-
-/* Class = "NSMenuItem"; title = "Send Link by Email"; ObjectID = "1073"; */
-"1073.title" = "Send Link by Email";
-
-/* Class = "NSMenuItem"; title = "Bigger Text"; ObjectID = "1084"; */
-"1084.title" = "Större text";
-
-/* Class = "NSMenuItem"; title = "Smaller Text"; ObjectID = "1085"; */
-"1085.title" = "Mindre text";
-
-/* Class = "NSMenuItem"; title = "Open Web Location…"; ObjectID = "1101"; */
-"1101.title" = "Öppna plats…";
-
-/* Class = "NSMenuItem"; title = "Check for Updates"; ObjectID = "1104"; */
-"1104.title" = "Sök efter uppdateringar";
-
-/* Class = "NSMenuItem"; title = "Refresh Folder Images"; ObjectID = "1106"; */
-"1106.title" = "Ladda om mappbilder";
-
-/* Class = "NSMenuItem"; title = "Layout"; ObjectID = "1108"; */
-"1108.title" = "Layout";
-
-/* Class = "NSMenu"; title = "Layout"; ObjectID = "1109"; */
-"1109.title" = "Layout";
-
-/* Class = "NSMenuItem"; title = "Horizontal"; ObjectID = "1110"; */
-"1110.title" = "Rapport";
-
-/* Class = "NSMenuItem"; title = "Vertical"; ObjectID = "1116"; */
-"1116.title" = "Kompakt";
-
-/* Class = "NSMenuItem"; title = "Filter By"; ObjectID = "1117"; */
-"1117.title" = "Filtrera På";
-
-/* Class = "NSMenu"; title = "Filter By"; ObjectID = "1118"; */
-"1118.title" = "Filtrera På";
-
-/* Class = "NSMenuItem"; title = "Keyboard Shortcuts"; ObjectID = "1146"; */
-"1146.title" = "Kortkommandon";
-
-/* Class = "NSMenuItem"; title = "Unified"; ObjectID = "1160"; */
-"1160.title" = "Enad";
-
-/* Class = "NSMenuItem"; title = "Folder"; ObjectID = "1177"; */
-"1177.title" = "Mapp";
-
-/* Class = "NSMenu"; title = "Folder"; ObjectID = "1178"; */
-"1178.title" = "Mapp";
-
-/* Class = "NSMenuItem"; title = "Edit…"; ObjectID = "1180"; */
-"1180.title" = "Redigera…";
-
-/* Class = "NSMenuItem"; title = "Rename…"; ObjectID = "1181"; */
-"1181.title" = "Döp om…";
-
-/* Class = "NSMenuItem"; title = "Delete…"; ObjectID = "1184"; */
-"1184.title" = "Radera…";
-
-/* Class = "NSMenuItem"; title = "Skip Folder"; ObjectID = "1186"; */
-"1186.title" = "Hoppa till nästa mapp";
-
-/* Class = "NSMenuItem"; title = "Mark All Articles as Read"; ObjectID = "1187"; */
-"1187.title" = "Markera alla artiklar som lästa";
-
-/* Class = "NSMenuItem"; title = "Open Subscription Home Page"; ObjectID = "1191"; */
-"1191.title" = "Källsida i webbläsare";
-
-/* Class = "NSMenuItem"; title = "Open Subscription Home Page in External Browser"; ObjectID = "1192"; */
-"1192.title" = "Öppna prenumerationhemsida i extern webbläsare";
-
-/* Class = "NSMenuItem"; title = "Mark All Subscriptions as Read"; ObjectID = "1195"; */
-"1195.title" = "Markera alla prenumerationer som lästa";
-
-/* Class = "NSMenuItem"; title = "Delete Article"; ObjectID = "1198"; */
-"1198.title" = "Radera artikel";
-
-/* Class = "NSMenuItem"; title = "Open New Tab"; ObjectID = "1214"; */
-"1214.title" = "Öpnna ny flik";
-
-/* Class = "NSMenuItem"; title = "Download Enclosure"; ObjectID = "1216"; */
-"1216.title" = "Ladda ner bilaga";
-
-/* Class = "NSMenuItem"; title = "Customize Toolbar…"; ObjectID = "1257"; */
-"1257.title" = "Anpassa verktygsrad…";
-
-/* Class = "NSMenuItem"; title = "Hide Toolbar"; ObjectID = "1258"; */
-"1258.title" = "Hide Toolbar";
-
-/* Class = "NSMenuItem"; title = "Hide Status Bar"; ObjectID = "1259"; */
-"1259.title" = "Göm statusfältet";
-
-/* Class = "NSMenuItem"; title = "Show Filter Bar"; ObjectID = "1325"; */
-"1325.title" = "Visa filtrera-fältet";
-
-/* Class = "NSMenuItem"; title = "Search Articles"; ObjectID = "1327"; */
-"1327.title" = "Sök i artiklar";
-
-/* Class = "NSMenuItem"; title = "Order By"; ObjectID = "1336"; */
-"1336.title" = "Order By";
-
-/* Class = "NSMenu"; title = "Order By"; ObjectID = "1337"; */
-"1337.title" = "Order By";
-
-/* Class = "NSMenuItem"; title = "Manual"; ObjectID = "1338"; */
-"1338.title" = "Manual";
-
-/* Class = "NSMenuItem"; title = "Name"; ObjectID = "1339"; */
-"1339.title" = "Name";
-
-/* Class = "NSButtonCell"; title = "Preserve group folders in exported file"; ObjectID = "1368"; */
-"1368.title" = "Bevara gruppmappar";
-
-/* Class = "NSTextFieldCell"; title = "Filter by:"; ObjectID = "1377"; */
-"1377.title" = "Filter by:";
-
-/* Class = "NSButtonCell"; title = "Radio"; ObjectID = "1380"; */
-"1380.title" = "Radio";
-
-/* Class = "NSMenuItem"; title = "Show XML Source"; ObjectID = "1394"; */
-"1394.title" = "Show XML Source";
-
-/* Class = "NSTextFieldCell"; title = "Current Filter"; ObjectID = "1404"; */
-"1404.title" = "Current Filter";
-
-/* Class = "NSMenuItem"; title = "Unsubscribe"; ObjectID = "1408"; */
-"1408.title" = "Sluta prenumerera på artiklar från sida";
-
-/* Class = "NSMenuItem"; title = "Get Info…"; ObjectID = "1409"; */
-"1409.title" = "Visa info…";
-
-/* Class = "NSMenuItem"; title = "Use Current Style for Articles"; ObjectID = "1413"; */
-"1413.title" = "Use Current Style for Articles";
-
-/* Class = "NSMenuItem"; title = "Use Web Page for Articles"; ObjectID = "1415"; */
-"1415.title" = "Use Web Page for Articles";
-
-/* Class = "NSMenuItem"; title = "Force Refresh Selected Subscriptions From Open Reader"; ObjectID = "1425"; */
-"1425.title" = "Force Refresh Selected Subscriptions From Open Reader";
-
-/* Class = "NSMenuItem"; title = "Update Subscriptions From Open Reader"; ObjectID = "1428"; */
-"1428.title" = "Update Subscriptions From Open Reader";
-
-/* Class = "NSMenuItem"; title = "Reindex Database"; ObjectID = "1458"; */
-"1458.title" = "Reindex Database";
-
-/* Class = "NSMenuItem"; title = "Refresh All Subscriptions"; ObjectID = "6yn-y8-lF1"; */
-"6yn-y8-lF1.title" = "Uppdatera alla prenumerationer";
-
-/* Class = "NSMenuItem"; title = "Mark All Subscriptions as Read"; ObjectID = "ecl-HO-Kpi"; */
-"ecl-HO-Kpi.title" = "Markera alla prenumerationer som lästa";
-
-/* Class = "NSMenu"; title = "Spelling"; ObjectID = "fad-Nj-OFI"; */
-"fad-Nj-OFI.title" = "Stavning";
-
-/* Class = "NSMenuItem"; title = "Mark Read"; ObjectID = "pKl-6f-Hlc"; */
-"pKl-6f-Hlc.title" = "Markera som läst";
