--- a/Interfaces/sv.lproj/GeneralPreferencesView.strings
+++ b/Interfaces/sv.lproj/GeneralPreferencesView.strings
@@ -35,7 +35,7 @@
 "JN6-lj-bQ1.title" = "Visa i menyraden";
 
 /* Class = "NSButtonCell"; title = "Search for latest Beta versions"; ObjectID = "OID-qF-Pp0"; */
-"OID-qF-Pp0.title" = "Search for latest Beta versions";
+"OID-qF-Pp0.title" = "Sök efter senaste betaversioner";
 
 /* Class = "NSButtonCell"; title = "Open links in external browser"; ObjectID = "YoM-Gv-hXn"; */
 "YoM-Gv-hXn.title" = "Öppna länkar i extern webbläsare";
@@ -58,9 +58,6 @@
 /* Class = "NSTextFieldCell"; title = "Default RSS Reader:"; ObjectID = "kGA-Sa-RLG"; */
 "kGA-Sa-RLG.title" = "Förvald RSS-läsare:";
 
-/* Class = "NSButtonCell"; title = "Mark updated articles as new"; ObjectID = "meo-78-YOl"; */
-"meo-78-YOl.title" = "Mark updated articles as new";
-
 /* Class = "NSMenuItem"; title = "Every 5 minutes"; ObjectID = "oVW-ee-uJT"; */
 "oVW-ee-uJT.title" = "Var 5:e minut";
 
@@ -71,13 +68,11 @@
 "pjg-Ze-H3l.title" = "Öppna nya länkar i bakgrunden";
 
 /* Class = "NSTextFieldCell"; title = "Updates:"; ObjectID = "qeb-at-hYb"; */
-"qeb-at-hYb.title" = "Updates:";
-
-/* Class = "NSButtonCell"; title = "Include anonymous system profile"; ObjectID = "qno-Cg-EkC"; */
-"qno-Cg-EkC.title" = "Include anonymous system profile";
+"qeb-at-hYb.title" = "Uppdateringar:";
 
 /* Class = "NSTextFieldCell"; title = "Mark current article read:"; ObjectID = "sCl-hz-PFF"; */
 "sCl-hz-PFF.title" = "Markera nuvarande artikel som läst:";
 
 /* Class = "NSMenuItem"; title = "Every hour"; ObjectID = "sSj-zI-6RY"; */
 "sSj-zI-6RY.title" = "Varje timme";
+
