--- a/Interfaces/ja.lproj/MainWindowController.strings
+++ b/Interfaces/ja.lproj/MainWindowController.strings
@@ -34,6 +34,9 @@
 /* Class = "NSPopUpButton"; ibShadowedToolTip = "Filter articles"; ObjectID = "1306"; */
 "1306.ibShadowedToolTip" = "記事をフィルター";
 
+/* Class = "NSTextFieldCell"; title = "Filter by:"; ObjectID = "1377"; */
+"1377.title" = "フィルター:";
+
 /* Class = "NSMenuItem"; title = "Refresh Selected Subscriptions"; ObjectID = "Hs0-hu-A2g"; */
 "Hs0-hu-A2g.title" = "選択された購読を更新";
 
