--- a/Interfaces/ru.lproj/MainWindowController.strings
+++ b/Interfaces/ru.lproj/MainWindowController.strings
@@ -46,6 +46,9 @@
 /* Class = "NSButton"; ibShadowedToolTip = "Close the filter bar"; ObjectID = "1313"; */
 "1313.ibShadowedToolTip" = "Закрыть панель фильтра";
 
+/* Class = "NSTextFieldCell"; title = "Filter by:"; ObjectID = "1377"; */
+"1377.title" = "Показывать:";
+
 /* Class = "NSToolbarItem"; label = "Add"; ObjectID = "CPA-Ha-aj1"; */
 "CPA-Ha-aj1.label" = "Добавить";
 
