--- a/Interfaces/ko.lproj/SearchFolder.strings
+++ b/Interfaces/ko.lproj/SearchFolder.strings
@@ -1,3 +1,6 @@
+/* Class = "NSMenuItem"; title = "all"; ObjectID = "82"; */
+"82.title" = "모든";
+
 /* Class = "NSTextFieldCell"; title = "Smart folder name:"; ObjectID = "94"; */
 "94.title" = "스마트 폴더 이름:";
 
@@ -12,4 +15,7 @@
 
 /* Class = "NSTextFieldCell"; title = "of the following conditions:"; ObjectID = "100"; */
 "100.title" = "조건에 일치하는 모든 기사 항목:";
+
+/* Class = "NSMenuItem"; title = "any"; ObjectID = "j0v-xF-tpl"; */
+"j0v-xF-tpl.title" = "일부";
 
