--- a/Interfaces/pt-BR.lproj/MainWindowController.strings
+++ b/Interfaces/pt-BR.lproj/MainWindowController.strings
@@ -46,6 +46,9 @@
 /* Class = "NSButton"; ibShadowedToolTip = "Close the filter bar"; ObjectID = "1313"; */
 "1313.ibShadowedToolTip" = "Fechar a barra de filtragem";
 
+/* Class = "NSTextFieldCell"; title = "Filter by:"; ObjectID = "1377"; */
+"1377.title" = "Filtrar por:";
+
 /* Class = "NSToolbarItem"; label = "Add"; ObjectID = "CPA-Ha-aj1"; */
 "CPA-Ha-aj1.label" = "Adicionar";
 
