--- a/Interfaces/pt-BR.lproj/SearchFolder.strings
+++ b/Interfaces/pt-BR.lproj/SearchFolder.strings
@@ -1,3 +1,6 @@
+/* Class = "NSMenuItem"; title = "all"; ObjectID = "82"; */
+"82.title" = "todos";
+
 /* Class = "NSTextFieldCell"; title = "Smart folder name:"; ObjectID = "94"; */
 "94.title" = "Nome da pasta inteligente:";
 
@@ -12,4 +15,7 @@
 
 /* Class = "NSTextFieldCell"; title = "of the following conditions:"; ObjectID = "100"; */
 "100.title" = "das seguintes condições:";
+
+/* Class = "NSMenuItem"; title = "any"; ObjectID = "j0v-xF-tpl"; */
+"j0v-xF-tpl.title" = "qualquer";
 
