--- a/Interfaces/sv.lproj/MainWindowController.strings
+++ b/Interfaces/sv.lproj/MainWindowController.strings
@@ -46,6 +46,9 @@
 /* Class = "NSButton"; ibShadowedToolTip = "Close the filter bar"; ObjectID = "1313"; */
 "1313.ibShadowedToolTip" = "Stäng filtrera-fältet";
 
+/* Class = "NSTextFieldCell"; title = "Filter by:"; ObjectID = "1377"; */
+"1377.title" = "Filtrera på:";
+
 /* Class = "NSTextFieldCell"; title = "Current Filter"; ObjectID = "1404"; */
 "1404.title" = "Nuvarande filter";
 
