--- a/Interfaces/zh-Hans.lproj/SearchFolder.strings
+++ b/Interfaces/zh-Hans.lproj/SearchFolder.strings
@@ -1,3 +1,6 @@
+/* Class = "NSMenuItem"; title = "all"; ObjectID = "82"; */
+"82.title" = "所有";
+
 /* Class = "NSTextFieldCell"; title = "Smart folder name:"; ObjectID = "94"; */
 "94.title" = "智能文件夹名称:";
 
@@ -12,4 +15,7 @@
 
 /* Class = "NSTextFieldCell"; title = "of the following conditions:"; ObjectID = "100"; */
 "100.title" = "以下条件的条目:";
+
+/* Class = "NSMenuItem"; title = "any"; ObjectID = "j0v-xF-tpl"; */
+"j0v-xF-tpl.title" = "任何";
 
